# XCanvas

./: .gitignore  CMakeLists.txt  README.md
CMake/: FetchDeps.cmake
Code/XCanvas/: Application.cpp  Application.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Input.hpp  Macros.hpp  Math.hpp  Point.hpp  Shaders.hpp  Shared.hpp  Typedefs.hpp
Testbed/: CMakeLists.txt  main.cpp
